configmap-als-datei.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-configmap-file
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["sh", "-c", "ls /etc/config && sleep 3600"] 
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        name: linkedin-configmap
