init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-pod
spec:
  containers:
  - name: linkedin-container
    image: busybox:latest
    command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
