secret-als-datei.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-secret-file
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["sh", "-c", "ls /etc/secrets && sleep 3600"] 
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/secrets
  volumes:
    - name: secret-volume
      secret:
        secretName: linkedin-secret
