time.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linkedin-time-pod
spec:
  containers:
  - name: linkedin-container
    image: busybox:latest
    command: ['sh', '-c', 'while true; do echo $(date) ; sleep 1; done']
